# aegis-code

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml
.github/workflows/: modernization_cd.yml  pr_review_trigger.yml
config/: config.yaml
data/: raw.dvc
data/raw/: CLAUDE.md
src/: main.py
src/aegis_code.egg-info/: SOURCES.txt  requires.txt  top_level.txt
src/agents/: code_analysis_agent.py  code_review_agent.py  documentation_agent.py  prompts.py  refactoring_agent.py  test_file.py  testing_agent.py
src/api/: server.py
src/integrations/: github_tools.py
tests/: test_analysis_tool.py  test_file_tools.py  test_github_tools.py  test_testing_tool.py
