[tool.poetry]
name = "aegis-code"
version = "0.1.0"
description = "A multi-agent system for code modernization and PR reviews."
authors = ["Shilpa Musale <shilpa.musale02@gmail.com>"]
readme = "README.md"
license = "MIT" # Assuming MIT, please update if you chose another license.
packages = [{include = "aegis_code", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
hydra-core = "^1.3.2"
langchain = "^0.2.0" # Example version, adjust as needed
langgraph = "^0.0.48" # Example version, adjust as needed
dvc = "^3.50.1" # Example version, adjust as needed
anthropic = "^0.25.0" # Example version, adjust as needed
python-dotenv = "^1.0.1"
rope = "^1.13.0"
bandit = "^1.7.8"
requests = "^2.31.0"
PyGithub = "^2.3.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.1"
ruff = "^0.4.4"
black = "^24.4.2"
pre-commit = "^3.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
