[tool.poetry]
name = "aegis-code"
version = "0.1.0"
description = "A multi-agent system for code modernization and PR reviews."
authors = ["Shilpa Musale <shilpa.musale02@gmail.com>"]
readme = "README.md"
license = "MIT"
packages = [{include = "aegis_code", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
hydra-core = "^1.3.2"

# Updated to a compatible set of versions
langchain = "^0.2.5"
langgraph = "^0.0.64"
langchain-anthropic = "^0.1.15" # Added for direct Claude integration

dvc = "^3.50.1"
python-dotenv = "^1.0.1"
rope = "^1.13.0"
bandit = "^1.7.8"
requests = "^2.31.0"
PyGithub = "^2.3.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.1"
ruff = "^0.4.4"
black = "^24.4.2"
pre-commit = "^3.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
